@@ -206,6 +206,7 @@
               android.util;resolution:=optional,
               com.adobe.xmp;resolution:=optional,
               com.adobe.xmp.properties;resolution:=optional,
+              com.github.openjson;resolution:=optional,
               com.google.protobuf;resolution:=optional,
               com.ibm.icu.text;resolution:=optional,
               com.sleepycat.je;resolution:=optional,
@@ -300,7 +301,6 @@
               org.jdom2.output;resolution:=optional,
               org.jdom2.filter;resolution:=optional,
               org.json.simple;resolution:=optional,
-              org.json;resolution:=optional,
               org.openxmlformats.schemas.officeDocument.x2006.math;resolution:=optional,
               org.openxmlformats.schemas.schemaLibrary.x2006.main;resolution:=optional,
               org.osgi.framework;resolution:=optional,
